Handle null during currency modification